--- a/RoadCrossingAwareness/RoadCrossingAwareness.cbp
+++ b/RoadCrossingAwareness/RoadCrossingAwareness.cbp
@@ -8,7 +8,6 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="bin/Debug/RoadCrossingAwareness" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="C:/mingw64/bin" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -18,9 +17,8 @@
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/RoadCrossingAwareness" prefix_auto="1" extension_auto="1" />
-				<Option working_dir="C:/mingw64/bin" />
 				<Option object_output="obj/Release/" />
-				<Option type="0" />
+				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-O2" />
@@ -32,16 +30,8 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
-			<Add directory="C:/mingw64/include" />
+			<Add option="-fexceptions" />
 		</Compiler>
-		<Linker>
-			<Add library="glut32" />
-			<Add library="opengl32" />
-			<Add library="glu32" />
-			<Add library="winmm" />
-			<Add library="gdi32" />
-			<Add directory="C:/mingw64/lib" />
-		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<lib_finder disable_auto="1" />
